# ChangeLog for dev-perl/Term-ReadLine-Perl
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Term-ReadLine-Perl/ChangeLog,v 1.25 2007/08/09 15:14:56 dertobi123 Exp $

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Term-ReadLine-Perl-1.03.02.ebuild:
  Stable on ppc.

  13 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  Term-ReadLine-Perl-1.03.02.ebuild:
  alpha/ia64/x86 stable

  07 Jul 2007; Tom Gall <tgall@gentoo.org>
  Term-ReadLine-Perl-1.03.02.ebuild:
  stable on ppc64

  12 May 2007; Joshua Kinard <kumba@gentoo.org>
  Term-ReadLine-Perl-1.03.02.ebuild:
  Stable on mips.

  15 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -Term-ReadLine-Perl-1.03.ebuild, Term-ReadLine-Perl-1.03.02.ebuild,
  Term-ReadLine-Perl-1.0203.ebuild:
  Marking amd64, sparc stable

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Term-ReadLine-Perl-1.03.ebuild, Term-ReadLine-Perl-1.03.02.ebuild,
  Term-ReadLine-Perl-1.0203.ebuild:
  Adding perl dep; fixed DEPEND

*Term-ReadLine-Perl-1.03.02 (24 Jun 2006)

  24 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  +Term-ReadLine-Perl-1.03.02.ebuild:
  Version bump

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  Term-ReadLine-Perl-1.03.ebuild:
  Marking sparc stable

*Term-ReadLine-Perl-1.03 (01 May 2006)

  01 May 2006; <mcumming@gentoo.org> +Term-ReadLine-Perl-1.03.ebuild:
  Version bump

  24 Apr 2006; Joshua Kinard <kumba@gentoo.org>
  Term-ReadLine-Perl-1.0203.ebuild:
  Marked stable on mips.

  29 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  Term-ReadLine-Perl-1.0203.ebuild:
  Cleaning up for mirror syntax

  06 Apr 2005; Markus Rothe <corsair@gentoo.org>
  Term-ReadLine-Perl-1.0203.ebuild:
  Stable on ppc64

  24 Feb 2005; Markus Rothe <corsair@gentoo.org>
  Term-ReadLine-Perl-1.0203.ebuild:
  Added ~ppc64 to KEYWORDS

  18 Feb 2005; Aron Griffis <agriffis@gentoo.org>
  Term-ReadLine-Perl-1.0203.ebuild:
  stable on ia64
