@@ -1,12 +1,12 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Term-ReadLine-Perl/Attic/Term-ReadLine-Perl-1.0203.ebuild,v 1.24 2008/04/22 18:54:34 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Term-ReadLine-Perl/Attic/Term-ReadLine-Perl-1.0203.ebuild,v 1.25 2009/05/08 18:16:11 tove Exp $
 
+MODULE_AUTHOR=ILYAZ
+MODULE_SECTION=modules
 inherit perl-module
 
 DESCRIPTION="Quick implementation of readline utilities."
-HOMEPAGE="http:/search.cpan.org/~ilyaz/${P}/"
-SRC_URI="mirror://cpan/authors/id/I/IL/ILYAZ/modules/${P}.tar.gz"
 
 LICENSE="|| ( Artistic GPL-2 )"
 SLOT="0"
