@@ -1,15 +1,15 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Term-ReadLine-Perl/Attic/Term-ReadLine-Perl-1.03.02.ebuild,v 1.9 2008/04/22 18:54:34 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Term-ReadLine-Perl/Attic/Term-ReadLine-Perl-1.03.02.ebuild,v 1.10 2009/05/08 18:16:11 tove Exp $
 
-inherit versionator perl-module
-
+inherit versionator
+MODULE_AUTHOR=ILYAZ
+MODULE_SECTION=modules
 MY_P="${PN}-$(delete_version_separator 2)"
 S="${WORKDIR}/${MY_P}"
+inherit perl-module
 
 DESCRIPTION="Quick implementation of readline utilities."
-HOMEPAGE="http:/search.cpan.org/~ilyaz/${P}/"
-SRC_URI="mirror://cpan/authors/id/I/IL/ILYAZ/modules/${MY_P}.tar.gz"
 
 LICENSE="|| ( Artistic GPL-2 )"
 SLOT="0"
