@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Term-ReadLine-Perl
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Term-ReadLine-Perl/ChangeLog,v 1.25 2007/08/09 15:14:56 dertobi123 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Term-ReadLine-Perl/ChangeLog,v 1.26 2009/05/08 18:16:11 tove Exp $
+
+  08 May 2009; Torsten Veller <tove@gentoo.org>
+  Term-ReadLine-Perl-1.03.02.ebuild, Term-ReadLine-Perl-1.0203.ebuild:
+  Fix HOMEPAGE
 
   09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   Term-ReadLine-Perl-1.03.02.ebuild:
